refact: separate the algorithms pages

--- a/prioridade_teto.html
+++ b/prioridade_teto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algoritmo para Escalonamento Rate Monotonic</title>
+    <title>Protocolo de Herança de Prioridade com Teto</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -16,9 +16,8 @@
 </head>
 
 <body>
-    <h1>Algoritmos de Escalonamento e Controle de Tarefas</h1>
-    <button onclick="window.location.href='rate_monotonic.html'">Rate Monotonic</button>
-    <button onclick="window.location.href='prioridade_teto.html'">Protocolo de Herança de Prioridade com Teto</button>
+    <h1><i class="bi bi-bar-chart-steps"></i> Protocolo de Herança de Prioridade com Teto</h1>
+    <h6>Em breve...</h6>
 </body>
 
 </html>
