refact: add base files for new algoritmn

--- a/rate_monotonic.html
+++ b/rate_monotonic.html
@@ -56,7 +56,7 @@
 
     <button onclick="calcularEscalonamento()"><i class="bi bi-calculator"></i> Calcular Escalonamento</button>
     <p id="resultado" class="resultadoOculto"></p>
-    <script src="script.js"></script>
+    <script src="script_rm.js"></script>
 </body>
 
 </html>
