--- a/prioridade_teto.html
+++ b/prioridade_teto.html
@@ -17,7 +17,51 @@
 
 <body>
     <h1><i class="bi bi-bar-chart-steps"></i> Protocolo de Herança de Prioridade com Teto</h1>
-    <h6>Em breve...</h6>
+    <h6>Adicione as seguintes informações sobre as tarefas:</h6>
+    <div class="camposTarefa">
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="tarefa" placeholder="Tarefa periódica">
+            <label for="tarefa">Tarefa periódica</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="number" class="form-control" id="periodo" placeholder="Período">
+            <label for="periodo">Período</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="number" class="form-control" id="tempo" placeholder="Tempo de computação">
+            <label for="tempo">Tempo de computação</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="number" class="form-control" id="prioridade" placeholder="Prioridade">
+            <label for="prioridade">Prioridade</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="number" class="form-control" id="tempoBloqueio" placeholder="Tempo de Bloqueio">
+            <label for="tempoBloqueio">Tempo de Bloqueio</label>
+        </div>
+    </div>
+
+    <button onclick="adicionarTarefa()"><i class="bi bi-file-earmark-plus"></i> Adicionar</button>
+
+    <table id="tabela" class="table table-striped">
+        <thead>
+            <tr>
+                <th>Tarefa periódica</th>
+                <th>Período</th>
+                <th>Tempo de computação</th>
+                <th>Prioridade</th>
+                <th>Tempo de Bloqueio</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody id="tbody">
+        </tbody>
+    </table>
+
+    <button onclick="calcularOrdemExec()"><i class="bi bi-calculator"></i> Calcular Ordem de Execução</button>
+   
+
+    <script src="script_pcp.js"></script>
 </body>
 
 </html>
